--- a/Lalit_Task05.html
+++ b/Lalit_Task05.html
@@ -11,25 +11,33 @@
         <li>Delhi</li>
         <ul>
             <li>NewDelhi</li>
+            <a href="https://en.wikipedia.org/wiki/New_Delhi" target="_blank"><img src="../Images/Delhi.jpg" width="400px" alt="NewDelhi"></a>          
         </ul>
         <li>Haryana</li>
         <ul>
             <li>Chandigarh</li>
+            <a href="https://en.wikipedia.org/wiki/Chandigarh" target="_blank"><img src="../Images/Chandigarh.jpg" width="400px" alt="Chandigarh"></a>
         </ul>
         <li>Gujarat</li>
-        <ul><li>Gandhinagar</li>
+        <ul>
+            <li>Gandhinagar</li>
+            <a href="https://en.wikipedia.org/wiki/Gandhinagar" target="_blank"><img src="../Images/Gandhinagar.jpg" width="400px" alt="Gandhinagar"></a>  
         </ul>
         <li>Rajasthan</li>
-        <ul><li>Jaipur</li>
+        <ul>
+            <li>Jaipur</li>
+            <a href="https://en.wikipedia.org/wiki/Jaipur" target="_blank"><img src="../Images/Jaipur.jpg" width="400px" alt="Jaipur"></a>  
         </ul>
         <li>Maharashtra</li>
-        <ul><li>
-            Mumbai
-        </li></ul>
+        <ul>
+            <li> Mumbai</li>
+            <a href="https://en.wikipedia.org/wiki/Mumbai" target="_blank"><img src="../Images/Mumbai.jpg" width="400px" alt="Mumbai"></a>  
+        </ul>
         <li>Uttarpradesh</li>
-        <ul><li>
-            Lucknow
-        </li></ul>
+        <ul>
+            <li>Lucknow</li>
+            <a href="https://en.wikipedia.org/wiki/Lucknow" target="_blank"><img src="../Images/Lucknow.jpeg" width="400px" alt="Lucknow"></a>  
+        </ul>
     </ol>
 </body>
 </html>
