--- a/Task/Lalit-Task04.html
+++ b/Task/Lalit-Task04.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Path in HTML</h1>
         <h2>absolute path</h2>
-        <img src="E:\Github\Images\image01.jpg" width="200px" alt="Image">
+        <img src="E:\Github\HTML\Images\image01.jpg" width="200px" alt="Image">
         <h2>relative Path</h2>
         <img src="../Images/image01.jpg" width="50%" alt="Image">
         <h2>Anchor Tag</h2>
