--- a/Projects/Project01/about.html
+++ b/Projects/Project01/about.html
@@ -6,11 +6,13 @@
     <title>About</title>
 </head>
 <body>
-    <h2>About me</h2>
-    <ol>
-        <li><b><a href="https://www.linkedin.com/in/lalit-kumar-a575611b8" target="iframe2">Linkedln</a></b></li>
-        <li><b><a href="https://github.com/Lalit881" target="iframe2">Github</a></b></li>
-        <li><b><a href="https://instagram.com/lalit_razzz?igshid=NGExMmI2YTkyZg==" target="iframe2">Instagram</a></b></li>
-    </ol>
+    <h1>Lalit Kumar</h1>
+    <b><a href="https://mail.google.com/mail/u/0/#sent?compose=CllgCKHRMTNfRFTbFKZqKsnPddTjpQjwTcdRTZdsVlSpBbggvLLNWbDkRgsSghXncnrJKBcZlzL" target="_blank">lalitraj881@gmail.com</a></b><br>
+    <b><a href="tel:8949557502">8949557502</a></b><br>
+    <b><a href="https://www.linkedin.com/in/lalit-kumar-a575611b8" target="_blank">Linkedln</a></b><br>
+    <b><a href="https://github.com/Lalit881" target="_blank">Github</a></b><br>
+    <b><a href="https://instagram.com/lalit_razzz?igshid=NGExMmI2YTkyZg==" target="_blank">Instagram</a></b>
+    <h2>About Me</h2>
+    <p><q>I'm a frontend developer with a passion for crafting engaging and user-friendly digital experiences. With a strong foundation in HTML, CSS, and JavaScript, I bring ideas to life through clean and efficient code. I thrive in collaborative environments, leveraging my communication skills to effectively translate design concepts into functional websites. Constantly learning and staying up-to-date with the latest industry trends, I strive to create intuitive interfaces that deliver seamless interactions. I'm dedicated to delivering high-quality work and always seek opportunities to enhance user satisfaction and improve the overall web experience.</q></p>
 </body>
 </html>
