--- a/Projects/Project01/Project01_sourcecode.html
+++ b/Projects/Project01/Project01_sourcecode.html
@@ -10,17 +10,19 @@
         <thead>
             <tr>
                 <th width="10%"><a href="../Project01/Project01_sourcecode.html"><img src="../../Images/namelogo.png" height="70px" alt="LOGO"></a></th>
-                <th width="18%"><a href="../Project01/Project01_sourcecode.html">Home</a></th>
-                <th width="18%"><a href="../Project01/Practice.html" target="iframe1">Practice</a></th>
-                <th width="18%"><a href="../Project01/Task.html" target="iframe1">Task</a></th>
-                <th width="18%"><a href="../Project01/Projects.html" target="iframe1">Project</a></th>
-                <th width="18%"><a href="../Project01/about.html" target="iframe2">About</a></th>
+                <th width="12.8%"><a href="../Project01/Project01_sourcecode.html">Home</a></th>
+                <th width="12.8%"><a href="../Project01/Practice.html" target="iframe1">Practice</a></th>
+                <th width="12.8%"><a href="../Project01/Task.html" target="iframe1">Task</a></th>
+                <th width="12.8%"><a href="../Project01/Projects.html" target="iframe1">Project</a></th>
+                <th width="12.8%"><a href="../Project01/Practicals.html"  target="iframe1">Practical</a></th>
+                <th width="12.8%"><a href="../Project01/Interview_Questions.html" target="iframe1">Interview Questions</a></th>
+                <th width="12.8%"><a href="../Project01/about.html" target="iframe2">About</a></th>
             </tr>
         </thead>
         <tbody height="560px">
             <tr>
                 <td><a target="iframe2"><iframe name="iframe1" width="200px" height="560px">Content</iframe></a></td>
-                <td colspan="5"><iframe name="iframe2" width="1193px" height="560px">Display</iframe></td>
+                <td colspan="7"><iframe name="iframe2" width="1193px" height="560px">Display</iframe></td>
             </tr>
         </tbody>
     </table>
