--- a/Projects/Project01/Task.html
+++ b/Projects/Project01/Task.html
@@ -14,6 +14,7 @@
         <li><a href="../../Task/Lalit_Task04.html" target="iframe2">Task04</a></li>
         <li><a href="../../Task/Lalit_Task05.html" target="iframe2">Task05</a></li>
         <li><a href="../../Task/Lalit_Task06.html" target="iframe2">Task06</a></li>
+        <li><a href="../../Task/Lalit_Task07_MoviesSurvey.html" target="iframe2">Task07</a></li>
     </ol>
 </body>
 </html>
